--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -238,7 +238,7 @@ button, input[type=submit]
   z-index 2
   &[disabled]
     color red
-    background white
+    background-image linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%)
     border-color red
     transform rotate(-10deg) scale(2) translateX(50%) translateY(-50%)
     &:hover
