Change app logo filename and in stylesheets

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -330,7 +330,7 @@ header.top h1 .spice-bean {
           justify-content: center;
   -webkit-box-align: center;
           align-items: center;
-  background: url("images/vanilla.svg") center no-repeat;
+  background: url("images/spice-beanery-logo.svg") center no-repeat;
   background-size: cover;
   padding: 0 8rem;
 }
