--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -16,7 +16,7 @@ header.top
       color orange
       justify-content: center
       align-items: center
-      background url('images/vanilla.svg') center no-repeat
+      background url('images/spice-beanery-logo.svg') center no-repeat
       background-size cover
       padding 0 8rem
 
