--- a/src/css/style.css
+++ b/src/css/style.css
@@ -476,7 +476,8 @@ ul.order li button {
   border: 0;
   display: none;
   line-height: 1;
-  padding: 0;
+  padding: 0 2px;
+  margin: 0 5px;
 }
 
 ul.order li.unavailable {
