--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -131,7 +131,8 @@ ul.order
       border 0
       display none
       line-height 1
-      padding 0
+      padding 0 2px
+      margin 0 5px
 
     &.unavailable
       text-decoration line-through
